--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://promise-zones.githubpages.com" # the base hostname & protocol for your site
 github_username: promise-zones
+googleAnalyticsKey: "UA-79018683-1"
 
 # Build settings
 markdown: kramdown
